# telecss

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: bench.yml  test.yml
crates/tele_codegen/: Cargo.toml
crates/tele_codegen/src/: lib.rs
crates/tele_codegen/tests/: codegen.rs
crates/tele_codegen/tests/snapshots/: codegen__codegen_for_at_rule.snap  codegen__codegen_for_ruleset.snap
crates/tele_folder/: Cargo.toml
crates/tele_folder/src/: lib.rs
crates/tele_folder/tests/: folder.rs
crates/tele_folder/tests/snapshots/: folder__fold_decl_node.snap  folder__ruleset_with_a_single_decl.snap
crates/tele_parser/: Cargo.toml
crates/tele_parser/benches/: parse.rs
crates/tele_parser/src/: error.rs  lib.rs  node.rs  selector.rs  value.rs
crates/tele_parser/tests/: parse.rs
crates/tele_parser/tests/snapshots/: parse__at_rule_with_block.snap  parse__at_rule_without_block.snap  parse__decl_with_important.snap  parse__nested_at_rule.snap  parse__percentage_token.snap  parse__ruleset_with_a_single_decl.snap  parse__ruleset_with_a_single_decl_no_trailing_semicolon.snap  parse__ruleset_with_multi_decls.snap  parse__skip_comments.snap
crates/tele_tokenizer/: Cargo.toml
crates/tele_tokenizer/benches/: tokenize.rs
crates/tele_tokenizer/src/: error.rs  inner_state.rs  lib.rs  token.rs
crates/tele_tokenizer/tests/: basics.rs  error.rs
crates/tele_tokenizer/tests/snapshots/: basics__at_keyword.snap  basics__at_keyword_as_delim.snap  basics__comma.snap  basics__comments.snap  basics__dimension_with_unit_and_percentage_token.snap  basics__hash_token.snap  basics__hyphen_minus_sign_as_cdc.snap  basics__hyphen_minus_sign_as_delim.snap  basics__hyphen_minus_sign_as_ident.snap  basics__hyphen_minus_sign_as_numeric.snap  basics__it_works.snap  basics__less_than_sign_as_cdo.snap  basics__less_than_sign_as_delim.snap  basics__number_token.snap  basics__plus_sign_as_delim.snap  basics__plus_sign_as_numeric.snap  basics__string_case.snap  basics__url_function.snap  basics__url_function_apostrophe.snap  basics__url_function_quotation_mark.snap  basics__url_function_with_whitespace.snap  basics__url_token.snap
crates/tele_utils/: Cargo.toml
crates/tele_utils/src/: lib.rs
crates/tele_utils/tests/: utils.rs
crates/tele_visit/: Cargo.toml
crates/tele_visit/src/: lib.rs
crates/tele_visit/tests/: visit_mut.rs
crates/tele_visit/tests/snapshots/: visit_mut__multi_visitors.snap  visit_mut__visit_decl_node.snap
crates/tele_wasm/: Cargo.toml
crates/tele_wasm/src/: lib.rs
crates/telecss/: Cargo.toml
crates/telecss/examples/normalizecss/: main.rs  normalize.css
crates/telecss/src/: lib.rs  main.rs
dev/bench/: data.js
playground/: README.md  index.html
