[package]
name = "tele_folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tele_parser = { path = "../tele_parser" }

[dev-dependencies]
insta = "1.10.0"
tele_tokenizer = { path = "../tele_tokenizer" }