[package]
name = "tele_tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tele_utils = { path = "../tele_utils" }
serde = { version = "1.0.133", features = ["derive"] }

[dev-dependencies]
insta = "1.10.0"

[features]
