[package]
edition = "2021"
name = "telecss"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
tele_parser = {path = "../tele_parser"}
tele_tokenizer = {path = "../tele_tokenizer"}
wasm-bindgen = {version = "0.2.79", features = ["serde-serialize"]}
